<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tylorlilley.kbrandomizer3.AboutActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/about_author_label"
                android:id="@+id/author_label"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:textAlignment="center"
                android:paddingBottom="10dp"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_the_author"
                android:id="@+id/author_text"
                android:textAlignment="center"
                android:layout_below="@+id/game_label"
                android:layout_centerHorizontal="true"
                android:paddingBottom="10dp"
                android:layout_marginBottom="10dp"
                android:autoLink="web"
                android:autoText="false" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/about_game_label"
                android:id="@+id/game_label"
                android:textAlignment="center"
                android:layout_below="@+id/game_text"
                android:layout_centerHorizontal="true"
                android:paddingBottom="10dp"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_the_game"
                android:id="@+id/game_text"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:textAlignment="center"
                android:layout_below="@+id/author_label"
                android:paddingBottom="10dp"
                android:layout_marginBottom="10dp"
                android:autoText="false" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/about_app_label"
                android:id="@+id/app_label"
                android:textAlignment="center"
                android:paddingBottom="10dp"
                android:layout_below="@+id/author_text"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_the_app_1"
                android:id="@+id/app_text1"
                android:textAlignment="center"
                android:paddingBottom="10dp"
                android:layout_below="@+id/app_label"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:textIsSelectable="true" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_the_app2"
                android:id="@+id/textView"
                android:layout_marginBottom="10dp"
                android:textAlignment="center" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/about_expansions_label"
                android:id="@+id/app_expansions_label"
                android:layout_marginBottom="30dp"
                android:textAlignment="center"
                android:layout_marginTop="30dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_the_app3"
                android:id="@+id/app_text3"
                android:layout_marginBottom="10dp"
                android:textAlignment="center" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_the_app4"
                android:id="@+id/app_text4"
                android:layout_marginBottom="10dp"
                android:textAlignment="center" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_the_app5"
                android:id="@+id/app_text7"
                android:layout_marginBottom="10dp"
                android:textAlignment="center" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/about_promos_label"
                android:id="@+id/app_promo_label"
                android:layout_marginBottom="30dp"
                android:textAlignment="center"
                android:layout_marginTop="20dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_the_app6"
                android:id="@+id/app_text2"
                android:layout_marginBottom="10dp"
                android:textAlignment="center" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_the_app7"
                android:id="@+id/app_text5"
                android:layout_marginBottom="10dp"
                android:textAlignment="center" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_the_app8"
                android:id="@+id/app_text6"
                android:layout_marginBottom="10dp"
                android:textAlignment="center" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
