<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="kbrandomizer3.SettingsActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/expansionsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/toggle_expansions_label"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#ffffff"
                android:baselineAligned="false"
                android:foregroundGravity="center"
                android:showDividers="middle"
                android:shrinkColumns="2"
                android:stretchColumns="*"
                android:textAlignment="center">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <CheckBox
                        android:id="@+id/baseGameBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginRight="1dp"
                        android:layout_marginBottom="1dp"
                        android:background="#e0e0e0"
                        android:buttonTint="#000000"
                        android:checked="true"
                        android:onClick="updateExpansionSettings"
                        android:text="@string/base_game" />

                    <CheckBox
                        android:id="@+id/nomadsBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="1dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginRight="1dp"
                        android:layout_marginBottom="1dp"
                        android:background="#e57373"
                        android:buttonTint="#000000"
                        android:checked="false"
                        android:onClick="updateExpansionSettings"
                        android:text="@string/nomads" />

                    <CheckBox
                        android:id="@+id/crossroadsBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="1dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginRight="2dp"
                        android:layout_marginBottom="1dp"
                        android:background="#64b5f6"
                        android:buttonTint="#000000"
                        android:checked="false"
                        android:onClick="updateExpansionSettings"
                        android:text="@string/crossroads" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <CheckBox
                        android:id="@+id/marshlandsBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:layout_marginTop="1dp"
                        android:layout_marginRight="1dp"
                        android:layout_marginBottom="2dp"
                        android:background="#a1887f"
                        android:buttonTint="#000000"
                        android:checked="false"
                        android:onClick="updateExpansionSettings"
                        android:text="@string/marshlands" />

                    <CheckBox
                        android:id="@+id/harvestBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="1dp"
                        android:layout_marginTop="1dp"
                        android:layout_marginRight="1dp"
                        android:layout_marginBottom="2dp"
                        android:background="#ffd54f"
                        android:buttonTint="#000000"
                        android:checked="false"
                        android:onClick="updateExpansionSettings"
                        android:text="@string/harvest" />

                </TableRow>

            </TableLayout>

            <TextView
                android:id="@+id/promosLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/toggle_promos_label"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#ffffff"
                android:stretchColumns="*">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <CheckBox
                        android:id="@+id/capitolsBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginRight="1dp"
                        android:layout_marginBottom="2dp"
                        android:background="#f8bbd0"
                        android:buttonTint="#000000"
                        android:checked="false"
                        android:onClick="updatePromoSettings"
                        android:text="@string/capitols" />

                    <CheckBox
                        android:id="@+id/cavesBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="1dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginRight="1dp"
                        android:layout_marginBottom="2dp"
                        android:background="#e1bee7"
                        android:buttonTint="#000000"
                        android:checked="false"
                        android:onClick="updatePromoSettings"
                        android:text="@string/caves" />

                    <CheckBox
                        android:id="@+id/islandBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="1dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginRight="2dp"
                        android:layout_marginBottom="2dp"
                        android:background="#b2dfdb"
                        android:buttonTint="#000000"
                        android:checked="false"
                        android:onClick="updatePromoSettings"
                        android:text="@string/island" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <CheckBox
                        android:id="@+id/emperorsChoiceBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="1dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginRight="2dp"
                        android:layout_marginBottom="2dp"
                        android:background="#DFCDB2"
                        android:buttonTint="#000000"
                        android:checked="false"
                        android:onClick="updatePromoSettings"
                        android:text="@string/emperor_s_choice" />
                </TableRow>
            </TableLayout>

            <TextView
                android:id="@+id/optionsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/promo_options_label"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#ffffff"
                android:stretchColumns="*">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <CheckBox
                        android:id="@+id/useWithAssignedBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginRight="1dp"
                        android:layout_marginBottom="2dp"
                        android:background="#eeeeee"
                        android:buttonTint="#000000"
                        android:checked="true"
                        android:onClick="updatePromoOptionSettings"
                        android:text="@string/use_with_assigned_board" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <CheckBox
                        android:id="@+id/useWithEmperorsChoiceBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="1dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginRight="2dp"
                        android:layout_marginBottom="2dp"
                        android:background="#eeeeee"
                        android:buttonTint="#000000"
                        android:checked="false"
                        android:onClick="updatePromoOptionSettings"
                        android:text="@string/use_with_emperor_s_choice" />

                </TableRow>


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <CheckBox
                        android:id="@+id/alwaysUseBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="1dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginRight="2dp"
                        android:layout_marginBottom="2dp"
                        android:background="#eeeeee"
                        android:buttonTint="#000000"
                        android:checked="false"
                        android:onClick="updatePromoOptionSettings"
                        android:text="@string/always_use" />

                </TableRow>
            </TableLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
